added hover on map

--- a/includes/wp-divi/ET_Builder_Module_Make_Pressure/frontend/css/ET_Builder_Module_Make_Pressure.css
+++ b/includes/wp-divi/ET_Builder_Module_Make_Pressure/frontend/css/ET_Builder_Module_Make_Pressure.css
@@ -268,3 +268,85 @@
 		width: 100%;
     }
 }
+
+#tooltip_TO:hover{
+	opacity:0.5;
+}
+#tooltip_BA:hover{
+	opacity:0.5;
+}
+#tooltip_SE:hover{
+	opacity:0.5;
+}
+#tooltip_PE:hover{
+	opacity:0.5;
+}
+#tooltip_AL:hover{
+	opacity:0.5;
+}
+#tooltip_RN:hover{
+	opacity:0.5;
+}
+#tooltip_CE:hover{
+	opacity:0.5;
+}
+#tooltip_PI:hover{
+	opacity:0.5;
+}
+#tooltip_MA:hover{
+	opacity:0.5;
+}
+#tooltip_AP:hover{
+	opacity:0.5;
+}
+#tooltip_PA:hover{
+	opacity:0.5;
+}
+#tooltip_RR:hover{
+	opacity:0.5;
+}
+#tooltip_AM:hover{
+	opacity:0.5;
+}
+#tooltip_AC:hover{
+	opacity:0.5;
+}
+#tooltip_RO:hover{
+	opacity:0.5;
+}
+#tooltip_MT:hover{
+	opacity:0.5;
+}
+#tooltip_MS:hover{
+	opacity:0.5;
+}
+#tooltip_GO:hover{
+	opacity:0.5;
+}
+#tooltip_PR:hover{
+	opacity:0.5;
+}
+#tooltip_SC:hover{
+	opacity:0.5;
+}
+#tooltip_RS:hover{
+	opacity:0.5;
+}
+#tooltip_SP:hover{
+	opacity:0.5;
+}
+#tooltip_MG:hover{
+	opacity:0.5;
+}
+#tooltip_RJ:hover{
+	opacity:0.5;
+}
+#tooltip_ES:hover{
+	opacity:0.5;
+}
+#tooltip_DF:hover{
+	opacity:0.5;
+}
+#tooltip_PB:hover{
+	opacity:0.5;
+}
